--- a/app.json
+++ b/app.json
@@ -23,10 +23,11 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.caridentify.app",
-      "buildNumber": "1",
+      "buildNumber": "7",
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses camera to capture car images for identification.",
-        "NSPhotoLibraryUsageDescription": "This app accesses photo library to select car images for identification."
+        "NSPhotoLibraryUsageDescription": "This app accesses photo library to select car images for identification.",
+        "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
@@ -38,8 +39,6 @@
       },
       "permissions": [
         "android.permission.CAMERA",
-        "android.permission.READ_EXTERNAL_STORAGE",
-        "android.permission.WRITE_EXTERNAL_STORAGE",
         "com.android.vending.BILLING"
       ]
     },
