chore(submit): set iOS ascAppId to 6749795011

--- a/eas.json
+++ b/eas.json
@@ -26,7 +26,7 @@
   "submit": {
     "production": {
       "ios": {
-        "ascAppId": "placeholder"
+        "ascAppId": "6749795011"
       }
     }
   }
