--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~53.0.0",
     "expo-camera": "~16.1.11",
     "expo-file-system": "~18.1.11",
+    "expo-image-manipulator": "^13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "~14.1.5",
