updated iap products2

--- a/app.json
+++ b/app.json
@@ -58,6 +58,6 @@
         "projectId": "6088d043-05b9-4843-b2cd-c66350e9a7a7"
       }
     },
-    "owner": "kyabahadr"
+    "owner": "car-identify-team"
   }
 }
