--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.3",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "expo": "~53.0.0",
-    "expo-camera": "~16.1.11",
-    "expo-file-system": "~18.1.11",
-    "expo-image-manipulator": "^13.1.7",
-    "expo-image-picker": "~16.1.4",
+    "expo": "~54.0.0",
+    "expo-camera": "~17.0.7",
+    "expo-file-system": "~19.0.14",
+    "expo-image-manipulator": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-in-app-purchases": "^14.5.0",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.0.0",
-    "expo-dev-client": "~5.2.4"
+    "expo-dev-client": "~6.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
