--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.17",
     "expo": "~54.0.0",
     "expo-camera": "~17.0.7",
+    "expo-dev-client": "~6.0.12",
     "expo-file-system": "~19.0.14",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
@@ -30,7 +31,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.0.0",
-    "expo-dev-client": "~6.0.12"
+    "react-native-worklets": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
