--- a/app.json
+++ b/app.json
@@ -68,7 +68,8 @@
         {
           "cameraPermission": "This app uses camera to capture car images for identification."
         }
-      ]
+      ],
+      "expo-in-app-purchases"
     ]
   }
 }
