--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "~15.0.7",
+    "expo-modules-core": "2.2.2",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
