--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "expo-file-system": "~19.0.14",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
-    "expo-in-app-purchases": "^14.5.0",
+    "expo-in-app-purchases": "~14.0.0",
     "expo-linear-gradient": "~15.0.7",
-    "expo-modules-core": "2.2.2",
+    "expo-modules-core": "1.12.20",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
