--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "car-identify",
     "version": "1.0.8",
     "orientation": "portrait",
+    "sdkVersion": "51.0.0",
     "platforms": [
       "ios",
       "android",
