--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "expo-file-system": "~19.0.14",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
-    "expo-in-app-purchases": "~14.0.0",
+    "react-native-iap": "^12.10.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-modules-core": "1.12.20",
     "expo-status-bar": "~3.0.8",
