--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "expo": "~54.0.0",
-    "expo-camera": "~17.0.7",
-    "expo-dev-client": "~6.0.12",
-    "expo-file-system": "~19.0.14",
-    "expo-image-manipulator": "~14.0.7",
-    "expo-image-picker": "~17.0.8",
-    "expo-in-app-purchases": "^12.0.0",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-modules-core": "1.12.20",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.4",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.0",
+    "expo": "~50.0.0",
+    "expo-camera": "~14.0.0",
+    "expo-dev-client": "~3.0.0",
+    "expo-file-system": "~16.0.0",
+    "expo-image-manipulator": "~11.0.0",
+    "expo-image-picker": "~14.0.0",
+    "expo-in-app-purchases": "~11.0.0",
+    "expo-linear-gradient": "~12.0.0",
+    "expo-modules-core": "~1.5.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-worklets": "^0.5.1"
   },
