--- a/package.json
+++ b/package.json
@@ -24,15 +24,14 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-modules-core": "~1.12.0",
     "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.18.0",
+    "react-native-reanimated": "~3.10.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "~4.12.0",
-    "react-native-screens": "~4.0.0",
-    "react-native-vector-icons": "^10.0.0",
-    "react-native-worklets": "^0.5.1"
+    "react-native-safe-area-context": "~4.10.0",
+    "react-native-screens": "~3.31.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
