--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "2.1.0",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "expo": "~53.0.0",
-    "expo-camera": "~16.0.7",
-    "expo-dev-client": "~5.0.6",
-    "expo-file-system": "~18.0.4",
-    "expo-image-manipulator": "~13.0.5",
-    "expo-image-picker": "~16.0.2",
+    "expo": "~51.0.0",
+    "expo-camera": "~16.1.11",
+    "expo-dev-client": "~5.2.4",
+    "expo-file-system": "~18.1.11",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-image-picker": "~16.1.4",
     "expo-in-app-purchases": "~13.0.0",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-modules-core": "~1.12.0",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.18.0",
-    "react-native-reanimated": "~3.10.0",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-modules-core": "~2.5.0",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "~4.10.0",
-    "react-native-screens": "~3.31.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
