--- a/app.json
+++ b/app.json
@@ -65,7 +65,8 @@
         {
           "cameraPermission": "This app uses camera to capture car images for identification."
         }
-      ]
+      ],
+      "expo-font"
     ]
   }
 }
