--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
     "expo-camera": "~16.1.11",
     "expo-dev-client": "~5.2.4",
     "expo-file-system": "~18.1.11",
+    "expo-font": "~12.0.10",
     "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-in-app-purchases": "~13.0.0",
     "expo-linear-gradient": "~14.1.5",
-    "expo-modules-core": "~2.5.0",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^20.0.2"
   },
   "private": true,
   "expo": {
