--- a/app.json
+++ b/app.json
@@ -66,7 +66,15 @@
           "cameraPermission": "This app uses camera to capture car images for identification."
         }
       ],
-      "expo-font"
+      "expo-font",
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "deploymentTarget": "13.4"
+          }
+        }
+      ]
     ]
   }
 }
