--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "expo": "~51.0.0",
+    "expo-build-properties": "~0.12.5",
     "expo-camera": "~16.1.11",
     "expo-dev-client": "~5.2.4",
     "expo-file-system": "~18.1.11",
