--- a/app.json
+++ b/app.json
@@ -36,7 +36,8 @@
       "permissions": [
         "android.permission.CAMERA",
         "android.permission.READ_EXTERNAL_STORAGE",
-        "android.permission.WRITE_EXTERNAL_STORAGE"
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.RECORD_AUDIO"
       ]
     },
     "web": {
@@ -50,7 +51,7 @@
         "projectId": "6088d043-05b9-4843-b2cd-c66350e9a7a7"
       }
     },
-    "owner": "car-identify-team",
+    "owner": "kyabahadr",
     "plugins": [
       "expo-dev-client",
       [
