--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "version": "1.0.8",
     "orientation": "portrait",
     "sdkVersion": "53.0.0",
+    "newArchEnabled": false,
     "platforms": [
       "ios",
       "android",
