--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "expo-in-app-purchases": "~13.0.0",
     "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.0",
+    "react": "18.2.0",
+    "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.18.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-reanimated": "~3.10.0",
+    "react-native-safe-area-context": "~4.10.0",
+    "react-native-screens": "~3.31.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
