--- a/package.json
+++ b/package.json
@@ -14,23 +14,25 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "expo": "~53.0.0",
+    "expo": "~54.0.0",
     "expo-build-properties": "~0.12.5",
-    "expo-camera": "~16.1.11",
-    "expo-dev-client": "~5.2.4",
-    "expo-file-system": "~18.1.11",
+    "expo-camera": "~17.0.7",
+    "expo-dev-client": "~6.0.12",
+    "expo-file-system": "~19.0.14",
     "expo-font": "~12.0.10",
-    "expo-image-manipulator": "~13.1.7",
-    "expo-image-picker": "~16.1.4",
-    "expo-in-app-purchases": "~13.0.0",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-status-bar": "~2.2.3",
-    "react": "18.2.0",
-    "react-native": "0.76.3",
-    "react-native-gesture-handler": "~2.18.0",
-    "react-native-reanimated": "~3.10.0",
-    "react-native-safe-area-context": "~4.10.0",
-    "react-native-screens": "~3.31.0",
+    "expo-image-manipulator": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
+    "expo-in-app-purchases": "^14.5.0",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "^0.5.1",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
