architecture false oldugu icin build alinamadi

--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.8",
     "orientation": "portrait",
     "sdkVersion": "54.0.0",
-    "newArchEnabled": false,
+    "newArchEnabled": true,
     "platforms": [
       "ios",
       "android",
