--- a/app.json
+++ b/app.json
@@ -54,7 +54,7 @@
         "projectId": "6088d043-05b9-4843-b2cd-c66350e9a7a7"
       }
     },
-    "owner": "kyabahadr-2",
+    "owner": "kyabahadr",
     "plugins": [
       "expo-dev-client",
       [
