--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "expo-font": "~12.0.10",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
-    "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
@@ -39,7 +38,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@react-native-community/cli": "^13.6.9"
+    "@react-native-community/cli": "^13.6.9",
+    "babel-plugin-transform-remove-console": "^6.9.4"
   },
   "private": true,
   "expo": {
