--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.13.2",
     "expo": "~54.0.0",
     "expo-build-properties": "~0.12.5",
     "expo-camera": "~17.0.7",
