md dosyalarini sildik

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,26 @@ api/
 vercel.json
 .vercelignore
 VERCEL_DEPLOYMENT.md
+
+# Internal documentation (do not commit to GitHub)
+CLEANUP_SUMMARY.md
+PRODUCTION_SECURITY_REPORT.md
+REVENUECAT_MIGRATION_COMPLETE.md
+CREDITS_REDUCTION_UPDATE.md
+APP_STORE_PRICING_GUIDE.md
+FIX_APP_STORE_KEY.md
+EAS_BUILD_INSTRUCTIONS.md
+REVENUECAT_FILES_SUMMARY.md
+REVENUECAT_INTEGRATION.md
+IAP_FIX_SUMMARY.md
+ALERT_DEBUG_GUIDE.md
+DEBUG_BUILD_INSTRUCTIONS.md
+DEPLOYMENT_INSTRUCTIONS.md
+SETUP_API_KEY.md
+BUILD_NOW.md
+APPLE_IAP_SETUP.md
+DEBUG_GUIDE.md
+IAP_TROUBLESHOOTING.md
+SIMPLE_IAP_FIX.md
+app-store-compliance.md
+app-store-metadata.md
